<resources>


    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main"></string>
    
    
    <string name="menu_settings">Settings</string>
    <string name="titulo1">Vuelos</string>
    <string name="titulo2">Datos del cliente</string>
    <string name="nombre">Nombre</string>
    <string name="apaterno">Apellido paterno</string>
    <string name="amaterno">Apellido materno</string>
    <string name="sexo">Sexo</string>
    <string name="edad">Edad</string>
    <string name="sexo1">Femenino</string>
    <string name="sexo2">Masculino</string>
    <string name="ninos">Niños</string>
    <string name="adultos">Adultos</string>
    <string name="app_name"></string>
    <string name="origen">Origen</string>
    <string name="destino">Destino</string>
    <string name="salida">Fecha salida</string>
    <string name="regreso">Fecha regreso</string>
    <string name="aceptar">Aceptar</string>
    <string name="detalle2">Horarios y precios</string>
    <string name="detalle1">Detalles de reservacion</string>
    <string name ="ciudadDest">Ciudad Destino</string>
    <string name="ciudadOri">Ciudad De origen</string>
    <string name="sexohint">Hombre o Mujer</string>
    
    

</resources>